@@ -1,5 +1,7 @@
 package com.flab.service;
 
+import com.flab.exception.NoSuchCourseException;
+import com.flab.exception.NoSuchScoreException;
 import com.flab.exception.NoSuchStudentException;
 import com.flab.model.Course;
 import com.flab.model.Score;
@@ -17,7 +19,10 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 @ExtendWith(MockitoExtension.class)
@@ -46,7 +51,7 @@ class TranscriptServiceImplTest {
         // given
         final int studentID = 1;
         final Student trey = new Student().setId(studentID).setName("Trey").setMajor("Computer Engineering")
-                .setCourses(List.of(KOREAN, ENGLISH, MATH, SCIENCE));
+                .setCourses(Arrays.asList(KOREAN, ENGLISH, MATH, SCIENCE));
 
         Mockito.when(studentRepository.getStudent(1))
                 .thenReturn(Optional.of(trey));
@@ -82,29 +87,76 @@ class TranscriptServiceImplTest {
     @Test
     @DisplayName("getAverageScore()에서 studentRepository.getStudent()를 한 번, scoreRepository.getScore()를 student의 course 개수만큼 호출한다.")
     void testGetAverageScore_HappyCase_VerifyNumberOfInteractions_Success() {
-        // TODO:
-        // Hint: Mockito.verify() 사용
-        throw new UnsupportedOperationException("Not implemented yet");
+        final int studentID = 1;
+        final Student yuseon = new Student().setId(studentID).setName("yuseon").setMajor("Computer Engineering")
+                .setCourses(Arrays.asList(KOREAN, ENGLISH, MATH, SCIENCE));
+
+        Mockito.when(studentRepository.getStudent(studentID)).thenReturn(Optional.of(yuseon));
+
+        Mockito.when(scoreRepository.getScore(studentID,1))
+                .thenReturn(Optional.of(new Score().setCourse(KOREAN).setScore(90)));
+        Mockito.when(scoreRepository.getScore(studentID,2))
+                .thenReturn(Optional.of(new Score().setCourse(ENGLISH).setScore(50)));
+        Mockito.when(scoreRepository.getScore(studentID,3))
+                .thenReturn(Optional.of(new Score().setCourse(MATH).setScore(70)));
+        Mockito.when(scoreRepository.getScore(studentID,4))
+                .thenReturn(Optional.of(new Score().setCourse(SCIENCE).setScore(80)));
+
+        // when
+        transcriptService.getAverageScore(studentID);
+
+        // then
+        yuseon.getCourses().forEach(courseID -> Mockito.verify(scoreRepository).getScore(studentID,courseID.getId()));
     }
 
     @Test
     @DisplayName("scoreRepository로부터 학생의 Score를 하나라도 찾을 수 없는 경우, getAverageScore()는 NoSuchScoreException을 Throw 한다.")
     void testGetAverageScore_ScoreNotExist_ThrowNoSuchScoreException_Error() {
-        // TODO:
-        throw new UnsupportedOperationException("Not implemented yet");
+        // given
+        final int studentID = 1;
+        final Student yuseon = new Student().setId(studentID).setName("yuseon").setMajor("Computer Engineering")
+                .setCourses(Arrays.asList(KOREAN));
+
+        Mockito.when(studentRepository.getStudent(studentID)).thenReturn(Optional.of(yuseon));
+        Mockito.when(scoreRepository.getScore(studentID, 1)).thenReturn(Optional.empty());
+
+        // when/then
+        Assertions.assertThrows(NoSuchScoreException.class, () -> transcriptService.getAverageScore(studentID));
     }
 
     @Test
     @DisplayName("getRankedStudentAsc()를 호출하면, 입력으로 주어진 course를 수강하는 모든 학생들의 리스트를 성적의 내림차순으로 리턴한다.")
     void testGetRankedStudentsAsc_HappyCase_VerifyReturnedValueAndInteractions_Success() {
-        // TODO:
-        throw new UnsupportedOperationException("Not implemented yet");
+        // given
+        final int studentID_1 = 1;
+        final int studentID_2 = 2;
+        final Student yuseon1 = new Student().setId(studentID_1).setName("yuseon1").setMajor("Computer Engineering")
+                .setCourses(Arrays.asList(KOREAN, ENGLISH, MATH, SCIENCE));
+        final Student yuseon2 = new Student().setId(studentID_2).setName("yuseon2").setMajor("Computer Engineering")
+                .setCourses(Arrays.asList(KOREAN, ENGLISH, MATH, SCIENCE));
+
+        final Map<Integer,Score> scoreMap = new HashMap<>();
+        scoreMap.put(1,new Score().setScore(80));
+        scoreMap.put(2,new Score().setScore(85));
+
+        Mockito.when(scoreRepository.getScores(KOREAN.getId())).thenReturn(scoreMap);
+        Mockito.when(studentRepository.getAllStudents()).thenReturn(Arrays.asList(yuseon1,yuseon2));
+        Mockito.when(courseRepository.getCourse(1)).thenReturn(Optional.of(KOREAN));
+
+        // when
+        final List<Student> students = transcriptService.getRankedStudentsAsc(KOREAN.getId());
+
+        // then
+        Assertions.assertEquals(Arrays.asList(yuseon2, yuseon1), students);
     }
 
     @Test
     @DisplayName("courseRepository에서 입력으로 주어진 courseID로 course를 조회할 수 없으면 NoSuchCourseException을 Throw 한다.")
     void testGetRankedStudentsAsc_CourseNotExist_ThrowNoSuchCourseException_Error() {
-        // TODO:
-        throw new UnsupportedOperationException("Not implemented yet");
+        // given
+        Mockito.when(courseRepository.getCourse(1)).thenReturn(Optional.empty());
+
+        // when/then
+        Assertions.assertThrows(NoSuchCourseException.class, () -> transcriptService.getRankedStudentsAsc(1));
     }
 }
